--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.jpa.properties.hibernate.show_sql = true
 ######### JPA #########
 #jpa > none update create > create-drop > validate
 spring.jpa.hibernate.ddl-auto = update
+
+######### JWT #########
+jwt.secret = berkayjwtsecret 
